# zibeline

./: .dockerignore  .env.docker  .env.example  .gitignore  CHI-CHI.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml
.github/workflows/: README.md  main.yml
api/src/order/: mod.rs  order_handler.rs
api/src/product/: product_handler.rs
api/src/user/: user_handler.rs
application/: Cargo.toml
application/src/order/: create.rs  delete.rs  mod.rs  read.rs  update.rs
application/src/product/: create.rs  delete.rs  read.rs  update.rs
application/src/user/: create.rs  delete.rs  read.rs  update.rs
docs/: deployment_scenarios.md  local_checklist.md  security.md  testing.md
domain/src/: models.rs
infrastructure/src/: lib.rs  schema.rs
scripts/: README.md  main.lua  setup.sh
scripts/commands/: api.lua  cleanup.lua  create_seed.lua  database.lua  ui.lua
scripts/lib/: config.lua  postgres_data.lua  utils.lua
scripts/server_setup/: server_setup.sh
server/: Cargo.toml  Dockerfile
server/api/: Cargo.toml
server/api/src/order/: order_handler.rs
server/api/src/product/: product_handler.rs
server/domain/: Cargo.toml
server/domain/src/: models.rs
server/infrastructure/: Cargo.toml
server/infrastructure/seeds/: seed.sql
server/infrastructure/src/: lib.rs  schema.rs
server/shared/: Cargo.toml
server/shared/src/: lib.rs  response_models.rs
shared/: Cargo.toml
shared/src/: response_models.rs
src/: main.rs
ui/: Dockerfile  README.md  index.html  nginx.conf
ui/src/: main.rs
(+41 files in other folders)
