[package]
name = "zibelina-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "^0.4.10", features = ["json"] }
reqwest = { version = "^0.11.20", features = ["json"] }
lru_time_cache = "^0.11.11"
