[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
shared = { path = "../shared" }

diesel = { version = "2.1.4", features = ["postgres"] }
serde_json = "1.0.108"
rocket = { version = "0.5.0", features = ["json"] }